*SVN*

* Deprecated the majority of all the testing assertions and replaced them with a much smaller core and access to all the collections the old assertions relied on. That way the regular test/unit assertions can be used against these. Added documentation about how to use it all.

* Fixed DateHelper to return values on the option tags such that they'll work properly in IE with form_remote_tag #1024 [rscottmace@gmail.com]

* Fixed FormTagHelper#check_box to respect checked #1049 [DelynnB]

* Added that render_partial called from a controller will use the action name as default #828 [Dan Peterson]

* Added Element.toggle, Element.show, and Element.hide to the prototype javascript library. Toggle.display has been deprecated, but will still work #992 [Lucas Carlson]

* Added that deleting a cookie should not just set it to an empty string but also instantly expire it #1118 [todd@robotcoop.com]

* Added AssetTagHelper#image_path, AssetTagHelper#javascript_path, and AssetTagHelper#stylesheet_path #1110 [Larry Halff]

* Fixed url_for(nil) in functional tests #1116 [Alisdair McDiarmid]

* Fixed error handling of broken layouts #1115 [Michael Schubert]

* Changed render_partial to take local assigns as the second parameter instead of an explicit object and then the assigns. So the API changes from:

    <%= render_partial "account", person, "rules" => regulations.rules %>
    
  ...to:
  
    <%= render_partial "account", :account => person, :rules => regulations.rules %>
  
  The old API will still work, though, and render_partial "account" will still assume :account => @account.

* Added submit_to_remote that allows you to trigger an Ajax form submition at the click of the submission button, which allows for multiple targets in a single form through the use of multiple submit buttons #930 [yrashk@gmail.com]

* Fixed pagination to work with joins #1034 [scott@sigkill.org]
