@@ -122,6 +122,14 @@ module ActionController
       @path_parameters ||= {}
     end
     
+    # Returns true if the request's "X-Requested-With" header contains
+    # "XMLHttpRequest". (The Prototype Javascript library sends this header with
+    # every Ajax request.)
+    def xml_http_request?
+      env['HTTP_X_REQUESTED_WITH'] =~ /XMLHttpRequest/i
+    end
+    alias xhr? :xml_http_request?
+    
     #--
     # Must be implemented in the concrete request
     #++
